--- a/modules/swagger-codegen-distribution/pom.xml
+++ b/modules/swagger-codegen-distribution/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <groupId>com.wordnik</groupId>
     <artifactId>swagger-codegen-project</artifactId>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.1.0-M1</version>
     <relativePath>../..</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -10,7 +10,7 @@
   <artifactId>swagger-codegen-distribution</artifactId>
   <packaging>jar</packaging>
   <name>swagger-codegen-distribution</name>
-  <version>2.1.0-SNAPSHOT</version>
+  <version>2.1.0-M1</version>
   <build>
     <testSourceDirectory>src/test/scala</testSourceDirectory>
     <outputDirectory>target/classes</outputDirectory>
