--- a/modules/swagger-generator/pom.xml
+++ b/modules/swagger-generator/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.wordnik</groupId>
     <artifactId>swagger-codegen-project</artifactId>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.1.0-M1</version>
     <relativePath>../..</relativePath>
   </parent>
   <groupId>com.wordnik</groupId>
@@ -224,7 +224,7 @@
     <zip-version>1.3.2</zip-version>
     <jetty-version>9.0.7.v20131107</jetty-version>
     <jersey2-version>2.4.1</jersey2-version>
-    <swagger-core-version>1.5.0-SNAPSHOT</swagger-core-version>
+    <swagger-core-version>1.5.1-M1</swagger-core-version>
 
     <scala-maven-plugin-version>3.1.5</scala-maven-plugin-version>
     <scala-version>2.10.0</scala-version>
