--- a/modules/swagger-codegen-distribution/pom.xml
+++ b/modules/swagger-codegen-distribution/pom.xml
@@ -9,7 +9,7 @@
   <groupId>com.wordnik</groupId>
   <artifactId>swagger-codegen-distribution</artifactId>
   <packaging>jar</packaging>
-  <name>swagger-codegen-distribution</name>
+  <name>swagger-codegen (executable)</name>
   <version>2.1.0-M1</version>
   <build>
     <testSourceDirectory>src/test/scala</testSourceDirectory>
@@ -18,7 +18,6 @@
     <defaultGoal>install</defaultGoal>
     <directory>target</directory>
     <finalName>${project.artifactId}-${project.version}</finalName>
-
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
