--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,44 @@
             <goals>sign</goals>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>2.7</version>
+          <configuration>
+            <aggregate>true</aggregate>
+            <source>1.6</source>
+            <encoding>UTF-8</encoding>
+            <maxmemory>1g</maxmemory>
+            <links>
+              <link>http://java.sun.com/javase/6/docs/api/</link>
+            </links>
+            <excludePackageNames>${javadoc.package.exclude}</excludePackageNames>
+          </configuration>
+          <executions>
+            <execution>
+              <id>attach-javadocs</id>
+              <phase>verify</phase>
+              <goals>
+                <goal>jar</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-source-plugin</artifactId>
+          <version>2.1.2</version>
+          <executions>
+            <execution>
+              <id>attach-sources</id>
+              <phase>verify</phase>
+              <goals>
+                <goal>jar-no-fork</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
