--- a/pom.xml
+++ b/pom.xml
@@ -347,7 +347,7 @@
     </repository>
   </repositories>
   <properties>
-    <swagger-parser-version>1.0.1-SNAPSHOT</swagger-parser-version>
+    <swagger-parser-version>1.0.0</swagger-parser-version>
     <scala-version>2.11.1</scala-version>
     <felix-version>2.3.4</felix-version>
     <swagger-core-version>1.5.1-M1</swagger-core-version>
