--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <artifactId>swagger-codegen-project</artifactId>
   <packaging>pom</packaging>
   <name>swagger-codegen-project</name>
-  <version>2.1.1-M1</version>
+  <version>2.1.2-M1-SNAPSHOT</version>
   <url>https://github.com/swagger-api/swagger-codegen</url>
   <scm>
     <connection>scm:git:git@github.com:swagger-api/swagger-codegen.git</connection>
