--- a/modules/swagger-generator/pom.xml
+++ b/modules/swagger-generator/pom.xml
@@ -10,7 +10,7 @@
   <artifactId>swagger-generator</artifactId>
   <packaging>war</packaging>
   <name>swagger-generator</name>
-  <version>1.0.0</version>
+  <version>2.1.3-M1-SNAPSHOT</version>
   <build>
     <sourceDirectory>src/main/java</sourceDirectory>
     <plugins>
@@ -232,7 +232,7 @@
     <zip-version>1.3.2</zip-version>
     <jetty-version>9.0.7.v20131107</jetty-version>
     <jersey2-version>2.4.1</jersey2-version>
-    <swagger-core-version>1.5.1-M1</swagger-core-version>
+    <swagger-core-version>1.5.2-M1</swagger-core-version>
 
     <scala-maven-plugin-version>3.1.5</scala-maven-plugin-version>
     <scala-version>2.10.0</scala-version>
