--- a/pom.xml
+++ b/pom.xml
@@ -279,15 +279,14 @@
     </profile>
     <profile>
       <!-- Samples -->
-      <id>samples</id>
+      <id>java-client</id>
       <activation>
         <property>
           <name>env</name>
-          <value>samples</value>
+          <value>java</value>
         </property>
       </activation>
       <modules>
-        <module>samples/client/petstore/objc</module>
         <module>samples/client/petstore/java</module>
       </modules>
     </profile>
