--- a/pom.xml
+++ b/pom.xml
@@ -290,6 +290,18 @@
         <module>samples/client/petstore/java</module>
       </modules>
     </profile>
+    <profile>
+      <id>objc-client</id>
+      <activation>
+        <property>
+          <name>env</name>
+          <value>objc</value>
+        </property>
+      </activation>
+      <modules>
+        <module>samples/client/petstore/objc</module>
+      </modules>
+    </profile>
   </profiles>
   <modules>
     <module>modules/swagger-codegen</module>
