--- a/samples/client/petstore/objc/pom.xml
+++ b/samples/client/petstore/objc/pom.xml
@@ -1,7 +1,7 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>de.felixschulze.my-project</groupId>
-  <artifactId>PetstoreClient</artifactId>
+  <groupId>com.wordnik</groupId>
+  <artifactId>ObjcPetstoreClientTests</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>Objective-C Swagger Petstore Client</name>
