--- a/pom.xml
+++ b/pom.xml
@@ -315,6 +315,18 @@
       </modules>
     </profile>
     <profile>
+      <id>ruby-client</id>
+      <activation>
+        <property>
+          <name>env</name>
+          <value>java</value>
+        </property>
+      </activation>
+      <modules>
+        <module>samples/client/petstore/ruby</module>
+      </modules>
+    </profile>
+    <profile>
       <id>samples</id>
       <activation>
         <property>
@@ -326,6 +338,7 @@
         <module>samples/client/petstore/java</module>
         <module>samples/server/petstore/jaxrs</module>
         <module>samples/client/petstore/objc</module>
+        <module>samples/client/petstore/ruby</module>
       </modules>
     </profile>
   </profiles>
