--- a/pom.xml
+++ b/pom.xml
@@ -339,6 +339,18 @@
       </modules>
     </profile>
     <profile>
+      <id>spring-mvc</id>
+      <activation>
+        <property>
+          <name>env</name>
+          <value>java</value>
+        </property>
+      </activation>
+      <modules>
+        <module>samples/server/petstore/spring-mvc</module>
+      </modules>
+    </profile>
+    <profile>
       <id>samples</id>
       <activation>
         <property>
@@ -350,6 +362,7 @@
         <module>samples/client/petstore/android-java</module>
         <module>samples/client/petstore/java</module>
         <module>samples/server/petstore/jaxrs</module>
+        <module>samples/server/petstore/spring-mvc</module>
         <module>samples/client/petstore/objc</module>
         <module>samples/client/petstore/ruby</module>
       </modules>
