--- a/pom.xml
+++ b/pom.xml
@@ -437,7 +437,7 @@
     </repository>
   </repositories>
   <properties>
-    <swagger-parser-version>1.0.5-SNAPSHOT</swagger-parser-version>
+    <swagger-parser-version>1.0.5</swagger-parser-version>
     <scala-version>2.10.4</scala-version>
     <felix-version>2.3.4</felix-version>
     <swagger-core-version>1.5.1-M2-SNAPSHOT</swagger-core-version>
