--- a/modules/swagger-codegen-cli/pom.xml
+++ b/modules/swagger-codegen-cli/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.wordnik</groupId>
         <artifactId>swagger-codegen-project</artifactId>
-        <version>2.1.3-M1-SNAPSHOT</version>
+        <version>1.5.0-M2</version>
         <relativePath>../..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
