--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ atlassian-ide-plugin.xml
 .DS_Store
 
 samples/client/petstore/php/SwaggerPetstore-php/vendor
+samples/client/petstore/php/SwaggerPetstore-php/composer.lock
