--- a/modules/swagger-codegen/pom.xml
+++ b/modules/swagger-codegen/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <groupId>com.wordnik</groupId>
     <artifactId>swagger-codegen-project</artifactId>
-    <version>1.5.0-M2</version>
+    <version>2.1.1-M2-SNAPSHOT</version>
     <relativePath>../..</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -10,7 +10,7 @@
   <artifactId>swagger-codegen</artifactId>
   <packaging>jar</packaging>
   <name>swagger-codegen (core library)</name>
-  <version>1.5.0-M2</version>
+  <version>2.1.1-M2-SNAPSHOT</version>
   <build>
     <sourceDirectory>src/main/java</sourceDirectory>
     <defaultGoal>install</defaultGoal>
