--- a/modules/swagger-generator/pom.xml
+++ b/modules/swagger-generator/pom.xml
@@ -3,14 +3,14 @@
   <parent>
     <groupId>com.wordnik</groupId>
     <artifactId>swagger-codegen-project</artifactId>
-    <version>1.5.0-M2</version>
+    <version>2.1.1-M2-SNAPSHOT</version>
     <relativePath>../..</relativePath>
   </parent>
   <groupId>com.wordnik</groupId>
   <artifactId>swagger-generator</artifactId>
   <packaging>war</packaging>
   <name>swagger-generator</name>
-  <version>1.5.0-M2</version>
+  <version>2.1.1-M2-SNAPSHOT</version>
   <build>
     <sourceDirectory>src/main/java</sourceDirectory>
     <plugins>
