--- a/samples/client/petstore/android-java/build.gradle
+++ b/samples/client/petstore/android-java/build.gradle
@@ -1,9 +1,15 @@
+group = 'io.swagger'
+project.version = '1.0.0'
+
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.2.2'
+        
+        classpath 'com.github.dcendents:android-maven-plugin:1.2'
+        
     }
 }
 
@@ -13,7 +19,10 @@ allprojects {
     }
 }
 
+
+
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
 
 android {
     compileSdkVersion 22
@@ -22,12 +31,26 @@ android {
         minSdkVersion 14
         targetSdkVersion 22
     }
+
+    // Rename the aar correctly
+    libraryVariants.all { variant ->
+        variant.outputs.each { output ->
+            def outputFile = output.outputFile
+            if (outputFile != null && outputFile.name.endsWith('.aar')) {
+                def fileName = "${project.name}-${variant.baseName}-${version}.aar"
+                output.outputFile = new File(outputFile.parent, fileName)
+            }
+        }
+    }
+
 }
 
 ext {
     swagger_annotations_version = "1.5.3-M1"
     jackson_version = "2.5.2"
-    httpclient_version = "4.3.3"
+    httpclient_android_version = "4.3.5.1"
+    httpcore_version = "4.4.1"
+    httpmime_version = "4.4.1"
     junit_version = "4.8.1"
 }
 
@@ -36,9 +59,13 @@ dependencies {
     compile "com.fasterxml.jackson.core:jackson-core:$jackson_version"
     compile "com.fasterxml.jackson.core:jackson-annotations:$jackson_version"
     compile "com.fasterxml.jackson.core:jackson-databind:$jackson_version"
-    compile "org.apache.httpcomponents:httpcore:$httpclient_version"
-    compile "org.apache.httpcomponents:httpclient:$httpclient_version"
-    compile "org.apache.httpcomponents:httpmime:$httpclient_version"
+    compile "org.apache.httpcomponents:httpclient-android:$httpclient_android_version"
+    compile ("org.apache.httpcomponents:httpcore:$httpcore_version") {
+        exclude(group: 'org.apache.httpcomponents', module: 'httpclient')
+    }
+    compile ("org.apache.httpcomponents:httpmime:$httpmime_version") {
+        exclude(group: 'org.apache.httpcomponents', module: 'httpclient')
+    }
     testCompile "junit:junit:$junit_version"
 }
 
@@ -49,7 +76,16 @@ afterEvaluate {
         task.dependsOn variant.javaCompile
         task.from variant.javaCompile.destinationDir
         task.destinationDir = project.file("${project.buildDir}/outputs/jar")
-        task.archiveName = "${project.name}-${variant.baseName}.jar"
+        task.archiveName = "${project.name}-${variant.baseName}-${version}.jar"
         artifacts.add('archives', task);
     }
+}
+
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+
+artifacts {
+    archives sourcesJar
 }
